구현 사항 - Insert 시 Spring boot S3 기능 적용 - 수정 시 먼저 S3에 신규 파일을 저장하고, 기존에 URL에 있는 정보를 삭제하도록 로직 설계 - 고객이 데이터를 예약 한 이후, 예약 정보를 일정에 저장하는 프론트엔드 로직 추가. - 중앙 집중화 된 Axios인슽턴스 로직을 멀티파이트 파일을 받는 경우에 한하여, header를 변경하여 요청을 보내는 로직 설계